[WIP] Make sure we don't use methods deprecated in recent JDKs